# Jets_2D

./: .gitignore  01_Windows_CMake_Ninja_Run.bat  02_Windows_Ninja_Run.bat  1_Linux_Cmake_Then_Build_Then_Run.sh  2_Linux_Build_Then_Run.sh  2_Linux_Make_And_Run.sh  3_Linux_Build_And_Not_Run.sh  3_Linux_Cmake_Then_Build_Then_Not_Run.sh  CMakeCache.txt  CMakeLists.txt  Linux_Build_And_Run.sh  Makefile  README.md  cmake_install.cmake  imgui.ini
Jets_2D/: Config.cpp  Config.h  Config.hpp  ErrorCheck.cpp  ErrorCheck.hpp  main.cu
Jets_2D/GL/: GLSetup.cpp  GLSetup.h  GLSetup.hpp  Inputs.cu  Inputs.hpp  Shader.cpp  Shader.h  Shader.hpp
Jets_2D/GPGPU/: Cooperative_Call.hpp  Epoch.cu  Epoch.h  Epoch.hpp  GPErrorCheck.hpp  GPSetup.cu  GPSetup.h  GPSetup.hpp  Helper.cu  Helper.h  Launcher.cu  Launcher.hpp  MapVertexBuffer.cu  MapVertexBuffer.h  Match.cu  Match.h  Match.hpp  NeuralNet.cu  NeuralNet.h  NeuralNet.hpp  NeuralNet_Eval.cu  NeuralNet_Eval.h  NeuralNet_Eval.hpp  Physic.cu  Physic.h  Physic.hpp  Round.cu  Round.h  Round.hpp  SetVariables.cu  SetVariables.h  SetVariables.hpp  State.h  State.hpp  Vertices.cu  Vertices.h  Vertices.hpp
Jets_2D/GUI/: GUI.cu  GUI.h  GUI.hpp  Print_Data_Info.cu  Print_Data_Info.hpp
Jets_2D/Graphics/: Axis.cpp  Axis.h  Axis.hpp  Camera.cpp  Camera.h  Camera.hpp  Circle.cu  Circle.h  Circle.hpp  CircleOfLife.cu  CircleOfLife.h  Component.cu  Component.hpp  Draw.h  Draw.hpp  GrSetup.cu  GrSetup.h  GrSetup.hpp  Thrust.cu  Thrust.hpp
Load/Shaders/: Craft.shader
Source/: Config.cpp  Config.h  ErrorCheck.cpp  ErrorCheck.h  Inputs.cu  Inputs.h  main.cu
Source/GL/: GLSetup.cpp  GLSetup.h  Inputs.cu  Inputs.h  Shader.cpp  Shader.h
Source/GPGPU/: Cooperative_Call.h  Epoch.cu  Epoch.h  GPErrorCheck.h  GPSetup.cu  GPSetup.h  GPU_Error_Check.h  Helper.cu  MapVertexBuffer.cu  MapVertexBuffer.h  Match.cu  Match.h  NeuralNet.cu  NeuralNet.h  NeuralNet_Eval.cu  NeuralNet_Eval.h  Physic.cu  Physic.h  Round.cu  Round.h  SetVariables.cu  SetVariables.h  State.h  Vertices.cu  Vertices.h
Source/GUI/: GUI.cu  GUI.h  Print_Data_Info.cu
Source/Graphics/: Axis.cpp  Axis.h  Camera.cpp  Camera.h  Circle.cu  Circle.h  CircleOfLife.cu  CircleOfLife.h  Component.cu  Component.h  Draw.h  GrSetup.cu  GrSetup.h  Thrust.cu  Thrust.h
Tests/GPGPU/: Coop_Test.cu  Coop_Test.hpp  NeuralNet_Eval.test.cu  NeuralNet_Eval.test.hpp
lib/GLFW/include/GLFW/: glfw3.h
lib/GLFW/src/: glfw_config.h  glfw_config.h.in  internal.h  osmesa_context.h
lib/glad/: glad.c  glad.h
lib/glm/ext/: matrix_clip_space.inl  matrix_transform.inl
lib/imgui/: ImGUI.cpp  imgui_widgets.cpp
res/Shaders/: Craft.shader
